--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "autoprefixer": "^9.6.0",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^8.0.6",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
     "css-loader": "^2.1.1",
     "file-loader": "^4.0.0",
     "postcss-loader": "^3.0.0",
